Workbench shadow shading incorrect results with GPU subdivision #94672

Closed
opened 2022-01-05 23:05:53 +01:00 by Hans Goudey · 5 comments
Member

System Information
Operating system: Linux-5.15.11-200.fc35.x86_64-x86_64-with-glibc2.34 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.46

Blender Version
Broken: version: 3.1.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: latest master
Worked: N/A

Short description of error
The show_shadows option has incorrect results when GPU subdivision is enabled.

Exact steps for others to reproduce the error

#94672 Report.blend

  • Load the provided file
  • Toggle GPU subdivision
  • Observe the following difference
    GPU Subdivision Off GPU Subdivision On
    {F12790734 size=full} {F12790737 size=full}
**System Information** Operating system: Linux-5.15.11-200.fc35.x86_64-x86_64-with-glibc2.34 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.46 **Blender Version** Broken: version: 3.1.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: latest master Worked: N/A **Short description of error** The `show_shadows` option has incorrect results when GPU subdivision is enabled. **Exact steps for others to reproduce the error** [#94672 Report.blend](https://archive.blender.org/developer/F12790741/T94672_Report.blend) - Load the provided file - Toggle GPU subdivision - Observe the following difference | GPU Subdivision Off | GPU Subdivision On | | -- | -- | | {[F12790734](https://archive.blender.org/developer/F12790734/image.png) size=full} | {[F12790737](https://archive.blender.org/developer/F12790737/image.png) size=full}
Author
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Author
Member

This seems to happen only when the camera is in the object's bounding box.

This seems to happen only when the camera is in the object's bounding box.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 0c6b29ee43

This issue was referenced by 0c6b29ee4378043493d1027e587a91a1e286dbb7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-01-06 16:25:44 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94672
No description provided.